<resources>
    <string name="app_name">Reader</string>
    <string name="book_list_empty_msg">列表中还没有书籍..</string>
    <string name="book_list_add">添加书籍</string>
    <string name="scanner">扫描文件</string>
    <string name="check">选择</string>
    <string name="scanner_no_permission">未获得储存读取权限，请点击右上按钮手动选择.</string>
    <string name="scanner_open">选择书籍</string>
    <string name="current_text_size">当前字体大小：</string>
    <string name="current_progress">当前进度：</string>
    <string name="skip_progress">进度跳转</string>
    <string name="skip">跳转</string>
    <string name="skip_progress_hint">0%</string>
    <string name="catalog">目录</string>
    <string name="current_chapter">当前章节：</string>
    <string name="text_increase">增大</string>
    <string name="text_decrease">缩小</string>
    <string name="chapter_add_professional">自定义正则匹配 -></string>
    <string name="chapter_empty">尚未发现章节，点击工具栏按钮索引</string>
    <string name="chapter_add">索引</string>
    <string name="chapter_add_title">章节索引</string>
    <string name="chapter_delete">删除章节信息</string>
    <string name="chapter_index_by">根据关键字</string>
    <string name="chapter_index_zhang">章</string>
    <string name="chapter_index_jie">节</string>
    <string name="chapter_index_hui">回</string>
    <string name="chapter_index_ji">集</string>
    <string name="cancel">取消</string>
    <string name="change_encode">更改编码</string>
</resources>