<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="config"
            type="com.will.reader.reader.PrintConfig" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.will.reader.reader.ReaderView
            android:id="@+id/fragment_reader_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_reader_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            app:cardUseCompatPadding="true"
            tools:visibility="visible"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/fragment_reader_chapter_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/ReaderMenuItemText"
                        tools:text="当前章节：231.请老祖宗赴死" />
                    <Button
                        android:id="@+id/fragment_reader_chapter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:text="@string/catalog"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/fragment_reader_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/ReaderMenuItemText"
                        tools:text="当前字体大小：48.8"
                        />
                    <Button
                        android:id="@+id/fragment_reader_text_size_decrease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:layout_marginEnd="10dp"
                        android:text="@string/text_decrease"/>
                    <Button
                        android:id="@+id/fragment_reader_text_size_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:text="@string/text_increase"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/fragment_reader_progress_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/ReaderMenuItemText"
                        tools:text="当前进度：32.72%" />
                    <Button
                        android:id="@+id/fragment_reader_progress_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:text="@string/skip_progress"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="3dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/fragment_reader_encode_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/ReaderMenuItemText"
                        tools:text="当前编码：GBK" />
                    <Button
                        android:id="@+id/fragment_reader_encode_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryLight"
                        android:text="@string/change_encode"
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>